src/objects/Growth_Factor__c.object
<CustomObject>
    <fields>
        <fullName>Chemo_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chemo Treatment</label>
        <referenceTo>Chemo_Treatment__c</referenceTo>
        <relationshipLabel>Growth Factor</relationshipLabel>
        <relationshipName>Growth_Factor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dose__c</fullName>
        <label>Dose</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <picklist>
            <picklistValues>
                <fullName>IV</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Oral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Injection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalDose__c</fullName>
        <label>TotalDose</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReceived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_GrowthFactor_Id__c</fullName>
        <label>pg_GrowthFactor_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Growth Factor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Growth Factor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>